# enterprise-data-pipeline

./: Makefile  README.md  docker-compose.yml  env.example  hadoop.env  pyproject.toml
airflow/: Dockerfile  requirements.txt
airflow/dags/: enterprise_data_pipeline_dag.py  kafka_dag.py  simple_dag.py
airflow/plugins/operators/: spark_operator.py  starburst_operator.py
dbt_project/: dbt_project.yml  packages.yml  profiles.yml
dbt_project/macros/: starburst_utils.sql
dbt_project/models/marts/: customer_cohorts.sql  daily_revenue.sql
dbt_project/models/staging/: sources.yml  stg_customers.sql  stg_orders.sql  stg_products.sql
dbt_project/seeds/: country_codes.csv
dbt_project/tests/: test_data_quality.sql
docs/: ARCHITECTURE.md  DEPLOYMENT.md  FEATURES.md  TROUBLESHOOTING.md
impala/conf/: core-site.xml  hdfs-site.xml  hive-site.xml
scripts/: dbt_utils.py  hdfs_utils.py  iceberg_utils.py  impala_utils.py  kafka_producer.py  setup_iceberg_tables.sql  spark_utils.py  starburst_utils.py  yarn_utils.py
spark/apps/: kafka_to_hdfs_streaming.py  sample_spark_job.py
spark/conf/: spark-defaults.conf  spark-env.sh
starburst/etc/: config.properties  node.properties
starburst/etc/catalog/: hive.properties  iceberg.properties
trino/etc/: config.properties
